[tool.poetry]
name = "pandoravisibility"
version = "0.1.0"
description = "A tool for calculating the visibility of targets from Pandoraa"
authors = ["Tom Barclay <barclay.astro@gmail.com>"]
license = "BSD-3-Clause license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.26"
sgp4 = "^2.23"
astropy = ">=6.1"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.4"
black = "^24.10.0"
pluggy = "^1.5.0"
pytest-cov = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
