[tool.poetry]
name = "pandoravisibility"
version = "0.1.0"
description = "A tool for calculating the visibility of targets from Pandora"
authors = ["Tom Barclay <barclay.astro@gmail.com>"]
license = "BSD-3-Clause license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.26"
sgp4 = "^2.23"
astropy = ">=6.1"
pandas = "^2.2.3"
matplotlib = {version = "^3.7", optional = true}

[tool.poetry.extras]
plotting = ["matplotlib"]


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.13.0"
pluggy = "^1.5.0"
packaging = "^24.0"
pytest-cov = "^7.0.0"


[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
